fix icon on mobile

--- a/frontend/web/less/mobile/post.less
+++ b/frontend/web/less/mobile/post.less
@@ -325,6 +325,7 @@
                     .post_massage{
                         font-size: 11px;
                         margin: 0px;
+                        word-break: break-all;
                         // overflow: hidden;
                         // text-overflow: ellipsis;
                         // white-space: nowrap;
@@ -345,7 +346,8 @@
                             margin: 0;
                         }
                         img{
-                            width: 18px;
+                            width: 20px;
+                            height: 20px;
                             display: block;
                             margin: 0px auto 1px;
                         }
@@ -363,7 +365,7 @@
                                 font-size: 8px;
                                 font-weight: bold;
                                 color: #eee;
-                                padding: 3px 0;
+                                padding: 5px 0;
                                 margin: 0;
                                 text-align: center;
                             }
@@ -382,11 +384,11 @@
                         .count{
                             width: 100%;
                             background: url('../../img/icon/brilliant_on.png') no-repeat center;
-                            background-size: 25px 25px;
+                            background-size: 30px 25px;
                             display: block;
                             text-align: center;
                             font-size: 9px;
-                            padding: 7px 0 3px;
+                            padding: 8px 0 3px;
                             p{
                                 text-align: center;
                                 font-size: 8px;
@@ -394,7 +396,7 @@
                             }
                             &.disable{
                                 background: url('../../img/icon/brilliant_off.png') no-repeat center;
-                                background-size: 25px 25px;
+                                background-size: 30px 30px;
                             }
                         }
                         p{
@@ -402,7 +404,7 @@
                             text-align: center;
                             width: 100%;
                             margin: 0;
-
+                            padding: 3px 0;
                         }
                     }
                     .btn_comment{
